[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "unblock-web"
version = "0.2.0"
description = "Anti-blok web scraping stack: 4-tier decision tree for Cloudflare Turnstile, x.com login walls, ISP DNS poisoning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "kevinnft", email = "kevinnft@users.noreply.github.com" },
]
keywords = [
    "web-scraping",
    "cloudflare-bypass",
    "anti-bot",
    "patchright",
    "scrapling",
    "playwright",
    "ai-agents",
    "tinyfish",
    "twitter-scraper",
    "dns-bypass",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core deps — minimal so `pip install unblock-web` is fast
# (Tier 2/4 work with stdlib only; Tier 1/3 need the [stealth] extra)
dependencies = []

[project.optional-dependencies]
# Local browser stealth (Tier 1 + Tier 3)
stealth = [
    "scrapling[all]>=0.4,<1.0",
    "patchright>=1.40,<2.0",
    "playwright>=1.40,<2.0",
]
# Everything (recommended for end users)
all = [
    "scrapling[all]>=0.4,<1.0",
    "patchright>=1.40,<2.0",
    "playwright>=1.40,<2.0",
]
# Test deps
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
unblock-web = "unblock_web.cli:main"

[project.urls]
Homepage = "https://github.com/kevinnft/unblock-web"
Documentation = "https://github.com/kevinnft/unblock-web/blob/main/README.md"
Repository = "https://github.com/kevinnft/unblock-web"
Issues = "https://github.com/kevinnft/unblock-web/issues"
Changelog = "https://github.com/kevinnft/unblock-web/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/unblock_web"]

[tool.hatch.build.targets.sdist]
include = [
    "src/unblock_web",
    "scripts",
    "examples",
    "docs",
    "README.md",
    "README.id.md",
    "LICENSE",
    "SECURITY.md",
    "CONTRIBUTING.md",
]
